syntax = "proto3";
option java_multiple_files = true;

package dk.via.sdj3_kursusopgave_part2;

message AnimalList {
  repeated string animalId = 1;
}

message cutProductMessage{
  repeated string cutId = 1;
}

message ProductMessage {
  string productId = 1;
  repeated cutProductMessage cuts = 2;
}

message ProductList {
  repeated ProductList products = 1;
}

message GetInfectedProductAndAnimalRequest {
  string animalId = 1;
  string productId = 2;
}

message GetInfectedProductAndAnimalResponse {
  AnimalList animal = 1;
  ProductList product = 2;
}

service InfectedService {
  rpc getInfectedProductAndAnimal(GetInfectedProductAndAnimalRequest) returns (GetInfectedProductAndAnimalResponse);
}